PHP Charset Detect Extension Changelog

$Id: Changelog,v 1.1.1.1 2009-02-18 15:02:28 oops Exp $

* 0.0.1
--------------------------------------------------------------------------------

Wed Feb 19 2009
by JoungKyun Kim <http://oops.org>
	- first build
